# tnat64

./: ChangeLog  INSTALL  INSTALL.md  Makefile.am  Makefile.in  README.creole  README.md  common.c  common.h  config.h.in  config.status  configure  configure.ac  configure.in  parser.c  parser.h  tnat64  tnat64-validateconf.1  tnat64.1  tnat64.8  tnat64.8.in  tnat64.c  tnat64.conf.5  tnat64.conf.complex.example  tnat64.conf.simple.example  tnat64.in  tsocks.c  tsocks.h  validateconf.c
.github/workflows/: main.yml
m4/: WHAT-IS-THIS
tests/: 01-correct-ipv6-address  02-local-connection  03-check-netlink-getsockname
